Had to disable a bunch of shit to get the game at least running. Can't get dynamic lighting to work in this version. Might try to find some more recent lighting library out there.

--- a/Roguelike/Roguelike.csproj
+++ b/Roguelike/Roguelike.csproj
@@ -79,7 +79,7 @@
     <Compile Include="Model\GameObjects\Monsters\AI\Pathfinding\AStar\PriorityQueue.cs" />
     <Compile Include="Model\GameObjects\Monsters\AI\Pathfinding\AStar\SpatialAStar.cs" />
     <Compile Include="Model\GameObjects\Monsters\AI\ShittyFollowAI.cs" />
-    <Compile Include="Model\GameObjects\Monsters\AI\ShittyLightAI.cs" />
+    <None Include="Model\GameObjects\Monsters\AI\ShittyLightAI.cs" />
     <Compile Include="Model\GameObjects\Monsters\AMonster.cs" />
     <Compile Include="Model\GameObjects\Monsters\GhostMonster.cs" />
     <Compile Include="Model\GameObjects\Monsters\MothMonster.cs" />
